--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.good.worshipbible.nos"
-    android:versionCode="23"
-    android:versionName="1.2.3" 
+    android:versionCode="25"
+    android:versionName="1.2.5" 
     android:installLocation="auto">
     <uses-sdk
         android:minSdkVersion="7"
@@ -334,6 +334,7 @@
   	<uses-permission android:name="android.permission.GET_TASKS"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-feature android:name="android.hardware.camera"></uses-feature>
+    <uses-permission android:name="com.android.vending.BILLING" />
     <!--<uses-permission android:name="android.permission.READ_CONTACTS" />-->
 
     <!-- GCM 관련 퍼미션 -->
