--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,10 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/CaulySDK-3.3.30.jar"/>
 	<classpathentry kind="lib" path="libs/google-play-services.jar"/>
-	<classpathentry kind="lib" path="libs/TadSDK_3.10.1.jar"/>
-	<classpathentry kind="lib" path="libs/AdMixer_1.4.4.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/DawinClickSDK_3.16.4.jar"/>
+	<classpathentry kind="lib" path="libs/AdMixer_1.4.6.jar"/>
+	<classpathentry kind="lib" path="libs/shallweadsdk_v1.12_20180718.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
