--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.good.worshipbible.nos"
-    android:versionCode="35"
-    android:versionName="1.3.5" 
+    android:versionCode="36"
+    android:versionName="1.3.6" 
     android:installLocation="auto">
     <uses-sdk
         android:minSdkVersion="7"
@@ -258,6 +258,9 @@
         <!-- For Admob -->
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity 
+            android:launchMode="singleTask"
+            android:excludeFromRecents="true"
+            android:noHistory="true"
             android:theme="@android:style/Theme.NoTitleBar"
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
