--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.good.worshipbible.nos"
-    android:versionCode="37"
-    android:versionName="1.3.7" 
+    android:versionCode="39"
+    android:versionName="1.3.9" 
     android:installLocation="auto">
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="26" />
+        android:targetSdkVersion="28" />
 
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:name="com.good.worshipbible.nos.favorite.ModApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon128"
@@ -31,6 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false"/>
         
         <activity 
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
